--- a/retrochallenge-201610-deadline.html
+++ b/retrochallenge-201610-deadline.html
@@ -15,24 +15,11 @@
         <header id="banner" class="body">
                 <h1><a href="https://mooped.github.io/">Mooplog </a></h1>
                 <nav><ul>
-                    <li><a href="https://mooped.github.io/category/arcade-controllers-things.html">Arcade Controllers, Things</a></li>
-                    <li><a href="https://mooped.github.io/category/foobot-games.html">Foobot, Games</a></li>
+                    <li><a href="https://mooped.github.io/category/games.html">Games</a></li>
                     <li><a href="https://mooped.github.io/category/games-loot-of-the-forest-ludum-dare.html">Games, Loot of the Forest, Ludum Dare</a></li>
-                    <li><a href="https://mooped.github.io/category/hi-fly-maiden-flights-things.html">Hi-Fly, Maiden Flights, Things</a></li>
-                    <li><a href="https://mooped.github.io/category/hi-fly-things.html">Hi-Fly, Things</a></li>
-                    <li><a href="https://mooped.github.io/category/hot-wire-things.html">Hot Wire, Things</a></li>
-                    <li><a href="https://mooped.github.io/category/maiden-flights-things-tricopter.html">Maiden Flights, Things, TriCopter</a></li>
                     <li><a href="https://mooped.github.io/category/misc.html">misc</a></li>
-                    <li><a href="https://mooped.github.io/category/pcb-drilling-jig-things.html">PCB Drilling Jig, Things</a></li>
-                    <li class="active"><a href="https://mooped.github.io/category/rc2014-retrochallenge.html">RC2014, Retrochallenge</a></li>
-                    <li><a href="https://mooped.github.io/category/rc2014-things.html">RC2014, Things</a></li>
-                    <li><a href="https://mooped.github.io/category/shapeoko-speed-twin-things.html">ShapeOko, Speed Twin, Things</a></li>
-                    <li><a href="https://mooped.github.io/category/shapeoko-speed-twin-things-unholy-chalupa.html">ShapeOko, Speed Twin, Things, Unholy Chalupa</a></li>
-                    <li><a href="https://mooped.github.io/category/shapeoko-things.html">ShapeOko, Things</a></li>
-                    <li><a href="https://mooped.github.io/category/speed-twin-things.html">Speed Twin, Things</a></li>
+                    <li class="active"><a href="https://mooped.github.io/category/retrochallenge.html">Retrochallenge</a></li>
                     <li><a href="https://mooped.github.io/category/things.html">Things</a></li>
-                    <li><a href="https://mooped.github.io/category/things-unholy-chalupa.html">Things, Unholy Chalupa</a></li>
-                    <li><a href="https://mooped.github.io/category/uncategorized.html">Uncategorized</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -52,8 +39,8 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="https://mooped.github.io/author/moop.html">moop</a>
         </address>
-<p>In <a href="https://mooped.github.io/category/rc2014-retrochallenge.html">RC2014, Retrochallenge</a>.</p>
-
+<p>In <a href="https://mooped.github.io/category/retrochallenge.html">Retrochallenge</a>.</p>
+<p>tags: <a href="https://mooped.github.io/tag/rc2014.html">RC2014</a> <a href="https://mooped.github.io/tag/retrochallenge.html">Retrochallenge</a> </p>
 </footer><!-- /.post-info -->      <p>I'm at my deadline for RetroChallenge 2016/10 and unfortunately I'm
 tantalisingly close to having something that works, but not quite there.</p>
 <p>I have the bitbang/slow mode working and generating pulses that match
