--- a/tags.html
+++ b/tags.html
@@ -15,36 +15,39 @@
         <header id="banner" class="body">
                 <h1><a href="https://mooped.github.io/">Mooplog </a></h1>
                 <nav><ul>
-                    <li><a href="https://mooped.github.io/category/arcade-controllers-things.html">Arcade Controllers, Things</a></li>
-                    <li><a href="https://mooped.github.io/category/foobot-games.html">Foobot, Games</a></li>
+                    <li><a href="https://mooped.github.io/category/games.html">Games</a></li>
                     <li><a href="https://mooped.github.io/category/games-loot-of-the-forest-ludum-dare.html">Games, Loot of the Forest, Ludum Dare</a></li>
-                    <li><a href="https://mooped.github.io/category/hi-fly-maiden-flights-things.html">Hi-Fly, Maiden Flights, Things</a></li>
-                    <li><a href="https://mooped.github.io/category/hi-fly-things.html">Hi-Fly, Things</a></li>
-                    <li><a href="https://mooped.github.io/category/hot-wire-things.html">Hot Wire, Things</a></li>
-                    <li><a href="https://mooped.github.io/category/maiden-flights-things-tricopter.html">Maiden Flights, Things, TriCopter</a></li>
                     <li><a href="https://mooped.github.io/category/misc.html">misc</a></li>
-                    <li><a href="https://mooped.github.io/category/pcb-drilling-jig-things.html">PCB Drilling Jig, Things</a></li>
-                    <li><a href="https://mooped.github.io/category/rc2014-retrochallenge.html">RC2014, Retrochallenge</a></li>
-                    <li><a href="https://mooped.github.io/category/rc2014-things.html">RC2014, Things</a></li>
-                    <li><a href="https://mooped.github.io/category/shapeoko-speed-twin-things.html">ShapeOko, Speed Twin, Things</a></li>
-                    <li><a href="https://mooped.github.io/category/shapeoko-speed-twin-things-unholy-chalupa.html">ShapeOko, Speed Twin, Things, Unholy Chalupa</a></li>
-                    <li><a href="https://mooped.github.io/category/shapeoko-things.html">ShapeOko, Things</a></li>
-                    <li><a href="https://mooped.github.io/category/speed-twin-things.html">Speed Twin, Things</a></li>
+                    <li><a href="https://mooped.github.io/category/retrochallenge.html">Retrochallenge</a></li>
                     <li><a href="https://mooped.github.io/category/things.html">Things</a></li>
-                    <li><a href="https://mooped.github.io/category/things-unholy-chalupa.html">Things, Unholy Chalupa</a></li>
-                    <li><a href="https://mooped.github.io/category/uncategorized.html">Uncategorized</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for Mooplog</h1>
     <ul>
+        <li><a href="https://mooped.github.io/tag/arcade-controllers.html">Arcade Controllers</a> (1)</li>
         <li><a href="https://mooped.github.io/tag/avr.html">AVR</a> (1)</li>
         <li><a href="https://mooped.github.io/tag/bluetooth.html">Bluetooth</a> (1)</li>
+        <li><a href="https://mooped.github.io/tag/charlie.html">Charlie</a> (4)</li>
         <li><a href="https://mooped.github.io/tag/digispark.html">DigiSpark</a> (1)</li>
         <li><a href="https://mooped.github.io/tag/electronics.html">Electronics</a> (1)</li>
+        <li><a href="https://mooped.github.io/tag/foobot.html">Foobot</a> (1)</li>
+        <li><a href="https://mooped.github.io/tag/games.html">Games</a> (1)</li>
+        <li><a href="https://mooped.github.io/tag/hexapod.html">Hexapod</a> (1)</li>
+        <li><a href="https://mooped.github.io/tag/hi-fly.html">Hi-Fly</a> (4)</li>
         <li><a href="https://mooped.github.io/tag/home-automation.html">Home automation</a> (1)</li>
+        <li><a href="https://mooped.github.io/tag/hot-wire.html">Hot Wire</a> (1)</li>
+        <li><a href="https://mooped.github.io/tag/maiden-flights.html">Maiden Flights</a> (2)</li>
         <li><a href="https://mooped.github.io/tag/mini-lathe.html">Mini Lathe</a> (1)</li>
+        <li><a href="https://mooped.github.io/tag/pcb-drilling-jig.html">PCB Drilling Jig</a> (1)</li>
+        <li><a href="https://mooped.github.io/tag/rc2014.html">RC2014</a> (9)</li>
+        <li><a href="https://mooped.github.io/tag/retrochallenge.html">Retrochallenge</a> (8)</li>
+        <li><a href="https://mooped.github.io/tag/shapeoko.html">ShapeOko</a> (5)</li>
+        <li><a href="https://mooped.github.io/tag/speed-twin.html">Speed Twin</a> (3)</li>
+        <li><a href="https://mooped.github.io/tag/things.html">Things</a> (19)</li>
+        <li><a href="https://mooped.github.io/tag/tricopter.html">TriCopter</a> (1)</li>
+        <li><a href="https://mooped.github.io/tag/unholy-chalupa.html">Unholy Chalupa</a> (2)</li>
         <li><a href="https://mooped.github.io/tag/wireless.html">Wireless</a> (1)</li>
     </ul>
 </section>
