Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -15,17 +15,15 @@
         <header id="banner" class="body">
                 <h1><a href="https://mooped.github.io/">Mooplog </a></h1>
                 <nav><ul>
+                    <li><a href="https://mooped.github.io/category/about.html">About</a></li>
                     <li><a href="https://mooped.github.io/category/games.html">Games</a></li>
-                    <li><a href="https://mooped.github.io/category/games-loot-of-the-forest-ludum-dare.html">Games, Loot of the Forest, Ludum Dare</a></li>
-                    <li><a href="https://mooped.github.io/category/misc.html">misc</a></li>
                     <li><a href="https://mooped.github.io/category/retrochallenge.html">Retrochallenge</a></li>
                     <li><a href="https://mooped.github.io/category/things.html">Things</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
+    <li><a href="https://mooped.github.io/category/about.html">About</a></li>
     <li><a href="https://mooped.github.io/category/games.html">Games</a></li>
-    <li><a href="https://mooped.github.io/category/games-loot-of-the-forest-ludum-dare.html">Games, Loot of the Forest, Ludum Dare</a></li>
-    <li><a href="https://mooped.github.io/category/misc.html">misc</a></li>
     <li><a href="https://mooped.github.io/category/retrochallenge.html">Retrochallenge</a></li>
     <li><a href="https://mooped.github.io/category/things.html">Things</a></li>
 </ul>
