--- a/tags.html
+++ b/tags.html
@@ -15,9 +15,8 @@
         <header id="banner" class="body">
                 <h1><a href="https://mooped.github.io/">Mooplog </a></h1>
                 <nav><ul>
+                    <li><a href="https://mooped.github.io/category/about.html">About</a></li>
                     <li><a href="https://mooped.github.io/category/games.html">Games</a></li>
-                    <li><a href="https://mooped.github.io/category/games-loot-of-the-forest-ludum-dare.html">Games, Loot of the Forest, Ludum Dare</a></li>
-                    <li><a href="https://mooped.github.io/category/misc.html">misc</a></li>
                     <li><a href="https://mooped.github.io/category/retrochallenge.html">Retrochallenge</a></li>
                     <li><a href="https://mooped.github.io/category/things.html">Things</a></li>
                 </ul></nav>
@@ -33,11 +32,13 @@
         <li><a href="https://mooped.github.io/tag/digispark.html">DigiSpark</a> (1)</li>
         <li><a href="https://mooped.github.io/tag/electronics.html">Electronics</a> (1)</li>
         <li><a href="https://mooped.github.io/tag/foobot.html">Foobot</a> (1)</li>
-        <li><a href="https://mooped.github.io/tag/games.html">Games</a> (1)</li>
+        <li><a href="https://mooped.github.io/tag/games.html">Games</a> (2)</li>
         <li><a href="https://mooped.github.io/tag/hexapod.html">Hexapod</a> (1)</li>
         <li><a href="https://mooped.github.io/tag/hi-fly.html">Hi-Fly</a> (4)</li>
         <li><a href="https://mooped.github.io/tag/home-automation.html">Home automation</a> (1)</li>
         <li><a href="https://mooped.github.io/tag/hot-wire.html">Hot Wire</a> (1)</li>
+        <li><a href="https://mooped.github.io/tag/loot-of-the-forest.html">Loot of the Forest</a> (1)</li>
+        <li><a href="https://mooped.github.io/tag/ludum-dare.html">Ludum Dare</a> (1)</li>
         <li><a href="https://mooped.github.io/tag/maiden-flights.html">Maiden Flights</a> (2)</li>
         <li><a href="https://mooped.github.io/tag/mini-lathe.html">Mini Lathe</a> (1)</li>
         <li><a href="https://mooped.github.io/tag/pcb-drilling-jig.html">PCB Drilling Jig</a> (1)</li>
