--- a/about.html
+++ b/about.html
@@ -15,9 +15,8 @@
         <header id="banner" class="body">
                 <h1><a href="https://mooped.github.io/">Mooplog </a></h1>
                 <nav><ul>
+                    <li class="active"><a href="https://mooped.github.io/category/about.html">About</a></li>
                     <li><a href="https://mooped.github.io/category/games.html">Games</a></li>
-                    <li><a href="https://mooped.github.io/category/games-loot-of-the-forest-ludum-dare.html">Games, Loot of the Forest, Ludum Dare</a></li>
-                    <li class="active"><a href="https://mooped.github.io/category/misc.html">misc</a></li>
                     <li><a href="https://mooped.github.io/category/retrochallenge.html">Retrochallenge</a></li>
                     <li><a href="https://mooped.github.io/category/things.html">Things</a></li>
                 </ul></nav>
@@ -39,7 +38,7 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="https://mooped.github.io/author/moop.html">moop</a>
         </address>
-<p>In <a href="https://mooped.github.io/category/misc.html">misc</a>.</p>
+<p>In <a href="https://mooped.github.io/category/about.html">About</a>.</p>
 
 </footer><!-- /.post-info -->      <p>Hi, I'm moop and I have a habit of making things.</p>
 <p>Hopefully this will turn into a place to write about them, instead of
