Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>Mooplog</title>
-        <link rel="stylesheet" href="https://mooped.github.io/theme/css/main.css" />
-        <link href="https://mooped.github.io/index.php/feed" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
+        <link rel="stylesheet" href="https://www.moop.org.uk/theme/css/main.css" />
+        <link href="https://www.moop.org.uk/index.php/feed" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,25 +13,25 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="https://mooped.github.io/">Mooplog </a></h1>
+                <h1><a href="https://www.moop.org.uk/">Mooplog </a></h1>
                 <nav><ul>
-                    <li><a href="https://mooped.github.io/category/about.html">About</a></li>
-                    <li><a href="https://mooped.github.io/category/games.html">Games</a></li>
-                    <li><a href="https://mooped.github.io/category/retrochallenge.html">Retrochallenge</a></li>
-                    <li><a href="https://mooped.github.io/category/things.html">Things</a></li>
+                    <li><a href="https://www.moop.org.uk/category/about.html">About</a></li>
+                    <li><a href="https://www.moop.org.uk/category/games.html">Games</a></li>
+                    <li><a href="https://www.moop.org.uk/category/retrochallenge.html">Retrochallenge</a></li>
+                    <li><a href="https://www.moop.org.uk/category/things.html">Things</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
-    <li><a href="https://mooped.github.io/category/about.html">About</a></li>
-    <li><a href="https://mooped.github.io/category/games.html">Games</a></li>
-    <li><a href="https://mooped.github.io/category/retrochallenge.html">Retrochallenge</a></li>
-    <li><a href="https://mooped.github.io/category/things.html">Things</a></li>
+    <li><a href="https://www.moop.org.uk/category/about.html">About</a></li>
+    <li><a href="https://www.moop.org.uk/category/games.html">Games</a></li>
+    <li><a href="https://www.moop.org.uk/category/retrochallenge.html">Retrochallenge</a></li>
+    <li><a href="https://www.moop.org.uk/category/things.html">Things</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="https://mooped.github.io/index.php/feed" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="https://www.moop.org.uk/index.php/feed" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                         </ul>
                 </div><!-- /.social -->
