--- a/tags.html
+++ b/tags.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>Mooplog - Tags</title>
-        <link rel="stylesheet" href="https://mooped.github.io/theme/css/main.css" />
-        <link href="https://mooped.github.io/index.php/feed" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
+        <link rel="stylesheet" href="https://www.moop.org.uk/theme/css/main.css" />
+        <link href="https://www.moop.org.uk/index.php/feed" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,43 +13,43 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="https://mooped.github.io/">Mooplog </a></h1>
+                <h1><a href="https://www.moop.org.uk/">Mooplog </a></h1>
                 <nav><ul>
-                    <li><a href="https://mooped.github.io/category/about.html">About</a></li>
-                    <li><a href="https://mooped.github.io/category/games.html">Games</a></li>
-                    <li><a href="https://mooped.github.io/category/retrochallenge.html">Retrochallenge</a></li>
-                    <li><a href="https://mooped.github.io/category/things.html">Things</a></li>
+                    <li><a href="https://www.moop.org.uk/category/about.html">About</a></li>
+                    <li><a href="https://www.moop.org.uk/category/games.html">Games</a></li>
+                    <li><a href="https://www.moop.org.uk/category/retrochallenge.html">Retrochallenge</a></li>
+                    <li><a href="https://www.moop.org.uk/category/things.html">Things</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for Mooplog</h1>
     <ul>
-        <li><a href="https://mooped.github.io/tag/arcade-controllers.html">Arcade Controllers</a> (1)</li>
-        <li><a href="https://mooped.github.io/tag/avr.html">AVR</a> (1)</li>
-        <li><a href="https://mooped.github.io/tag/bluetooth.html">Bluetooth</a> (1)</li>
-        <li><a href="https://mooped.github.io/tag/charlie.html">Charlie</a> (4)</li>
-        <li><a href="https://mooped.github.io/tag/digispark.html">DigiSpark</a> (1)</li>
-        <li><a href="https://mooped.github.io/tag/electronics.html">Electronics</a> (1)</li>
-        <li><a href="https://mooped.github.io/tag/foobot.html">Foobot</a> (1)</li>
-        <li><a href="https://mooped.github.io/tag/games.html">Games</a> (2)</li>
-        <li><a href="https://mooped.github.io/tag/hexapod.html">Hexapod</a> (1)</li>
-        <li><a href="https://mooped.github.io/tag/hi-fly.html">Hi-Fly</a> (4)</li>
-        <li><a href="https://mooped.github.io/tag/home-automation.html">Home automation</a> (1)</li>
-        <li><a href="https://mooped.github.io/tag/hot-wire.html">Hot Wire</a> (1)</li>
-        <li><a href="https://mooped.github.io/tag/loot-of-the-forest.html">Loot of the Forest</a> (1)</li>
-        <li><a href="https://mooped.github.io/tag/ludum-dare.html">Ludum Dare</a> (1)</li>
-        <li><a href="https://mooped.github.io/tag/maiden-flights.html">Maiden Flights</a> (2)</li>
-        <li><a href="https://mooped.github.io/tag/mini-lathe.html">Mini Lathe</a> (1)</li>
-        <li><a href="https://mooped.github.io/tag/pcb-drilling-jig.html">PCB Drilling Jig</a> (1)</li>
-        <li><a href="https://mooped.github.io/tag/rc2014.html">RC2014</a> (9)</li>
-        <li><a href="https://mooped.github.io/tag/retrochallenge.html">Retrochallenge</a> (8)</li>
-        <li><a href="https://mooped.github.io/tag/shapeoko.html">ShapeOko</a> (5)</li>
-        <li><a href="https://mooped.github.io/tag/speed-twin.html">Speed Twin</a> (3)</li>
-        <li><a href="https://mooped.github.io/tag/things.html">Things</a> (19)</li>
-        <li><a href="https://mooped.github.io/tag/tricopter.html">TriCopter</a> (1)</li>
-        <li><a href="https://mooped.github.io/tag/unholy-chalupa.html">Unholy Chalupa</a> (2)</li>
-        <li><a href="https://mooped.github.io/tag/wireless.html">Wireless</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/arcade-controllers.html">Arcade Controllers</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/avr.html">AVR</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/bluetooth.html">Bluetooth</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/charlie.html">Charlie</a> (4)</li>
+        <li><a href="https://www.moop.org.uk/tag/digispark.html">DigiSpark</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/electronics.html">Electronics</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/foobot.html">Foobot</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/games.html">Games</a> (2)</li>
+        <li><a href="https://www.moop.org.uk/tag/hexapod.html">Hexapod</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/hi-fly.html">Hi-Fly</a> (4)</li>
+        <li><a href="https://www.moop.org.uk/tag/home-automation.html">Home automation</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/hot-wire.html">Hot Wire</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/loot-of-the-forest.html">Loot of the Forest</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/ludum-dare.html">Ludum Dare</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/maiden-flights.html">Maiden Flights</a> (2)</li>
+        <li><a href="https://www.moop.org.uk/tag/mini-lathe.html">Mini Lathe</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/pcb-drilling-jig.html">PCB Drilling Jig</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/rc2014.html">RC2014</a> (9)</li>
+        <li><a href="https://www.moop.org.uk/tag/retrochallenge.html">Retrochallenge</a> (8)</li>
+        <li><a href="https://www.moop.org.uk/tag/shapeoko.html">ShapeOko</a> (5)</li>
+        <li><a href="https://www.moop.org.uk/tag/speed-twin.html">Speed Twin</a> (3)</li>
+        <li><a href="https://www.moop.org.uk/tag/things.html">Things</a> (19)</li>
+        <li><a href="https://www.moop.org.uk/tag/tricopter.html">TriCopter</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/unholy-chalupa.html">Unholy Chalupa</a> (2)</li>
+        <li><a href="https://www.moop.org.uk/tag/wireless.html">Wireless</a> (1)</li>
     </ul>
 </section>
 
@@ -57,7 +57,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="https://mooped.github.io/index.php/feed" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="https://www.moop.org.uk/index.php/feed" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                         </ul>
                 </div><!-- /.social -->
