--- a/mittens-and-snowdrop-action-figures.html
+++ b/mittens-and-snowdrop-action-figures.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>Mittens and Snowdrop action figures</title>
         <link rel="stylesheet" href="https://www.moop.org.uk/theme/css/main.css" />
-        <link href="https://www.moop.org.uk/index.php/feed" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
+        <link href="https://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -158,7 +158,7 @@ had to hand and varnished them with some EzeCote polyurethane.</p>
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="https://www.moop.org.uk/index.php/feed" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="https://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                         </ul>
                 </div><!-- /.social -->
