--- a/retrochallenge-201610-one-bodge-to-fix-them-all.html
+++ b/retrochallenge-201610-one-bodge-to-fix-them-all.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>RetroChallenge 2016/10 - One bodge to fix them all</title>
         <link rel="stylesheet" href="https://www.moop.org.uk/theme/css/main.css" />
-        <link href="https://www.moop.org.uk/index.php/feed" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
+        <link href="https://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -93,7 +93,7 @@ NAND and 7404 hex inverter that make up my glue logic.</p>
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="https://www.moop.org.uk/index.php/feed" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="https://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                         </ul>
                 </div><!-- /.social -->
