Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -18,6 +18,7 @@
                     <li><a href="https://www.moop.org.uk/category/about.html">About</a></li>
                     <li><a href="https://www.moop.org.uk/category/games.html">Games</a></li>
                     <li><a href="https://www.moop.org.uk/category/retrochallenge.html">Retrochallenge</a></li>
+                    <li><a href="https://www.moop.org.uk/category/site.html">Site</a></li>
                     <li><a href="https://www.moop.org.uk/category/things.html">Things</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -42,9 +43,11 @@
         <li><a href="https://www.moop.org.uk/tag/maiden-flights.html">Maiden Flights</a> (2)</li>
         <li><a href="https://www.moop.org.uk/tag/mini-lathe.html">Mini Lathe</a> (1)</li>
         <li><a href="https://www.moop.org.uk/tag/pcb-drilling-jig.html">PCB Drilling Jig</a> (1)</li>
+        <li><a href="https://www.moop.org.uk/tag/pelican.html">Pelican</a> (1)</li>
         <li><a href="https://www.moop.org.uk/tag/rc2014.html">RC2014</a> (9)</li>
         <li><a href="https://www.moop.org.uk/tag/retrochallenge.html">Retrochallenge</a> (8)</li>
         <li><a href="https://www.moop.org.uk/tag/shapeoko.html">ShapeOko</a> (5)</li>
+        <li><a href="https://www.moop.org.uk/tag/site.html">Site</a> (1)</li>
         <li><a href="https://www.moop.org.uk/tag/speed-twin.html">Speed Twin</a> (3)</li>
         <li><a href="https://www.moop.org.uk/tag/things.html">Things</a> (19)</li>
         <li><a href="https://www.moop.org.uk/tag/tricopter.html">TriCopter</a> (1)</li>
