--- a/archives.html
+++ b/archives.html
@@ -18,6 +18,7 @@
                     <li><a href="https://www.moop.org.uk/category/about.html">About</a></li>
                     <li><a href="https://www.moop.org.uk/category/games.html">Games</a></li>
                     <li><a href="https://www.moop.org.uk/category/retrochallenge.html">Retrochallenge</a></li>
+                    <li><a href="https://www.moop.org.uk/category/site.html">Site</a></li>
                     <li><a href="https://www.moop.org.uk/category/things.html">Things</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -25,6 +26,8 @@
 <h1>Archives for Mooplog</h1>
 
 <dl>
+    <dt>Mon 06 February 2017</dt>
+    <dd><a href="https://www.moop.org.uk/new-site.html">New Site With Pelican Static Site Generator</a></dd>
     <dt>Wed 02 November 2016</dt>
     <dd><a href="https://www.moop.org.uk/retrochallenge-201610-one-bodge-to-fix-them-all.html">RetroChallenge 2016/10 - One bodge to fix them all</a></dd>
     <dt>Tue 01 November 2016</dt>
