--- a/authors.html
+++ b/authors.html
@@ -18,6 +18,7 @@
                     <li><a href="https://www.moop.org.uk/category/about.html">About</a></li>
                     <li><a href="https://www.moop.org.uk/category/games.html">Games</a></li>
                     <li><a href="https://www.moop.org.uk/category/retrochallenge.html">Retrochallenge</a></li>
+                    <li><a href="https://www.moop.org.uk/category/site.html">Site</a></li>
                     <li><a href="https://www.moop.org.uk/category/things.html">Things</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -26,7 +27,7 @@
     <h1>Authors on Mooplog</h1>
     <ul>
         <li><a href="https://www.moop.org.uk/author/charlie.html">charlie</a> (5)</li>
-        <li><a href="https://www.moop.org.uk/author/moop.html">moop</a> (31)</li>
+        <li><a href="https://www.moop.org.uk/author/moop.html">moop</a> (32)</li>
     </ul>
 </section>
 
