--- a/categories.html
+++ b/categories.html
@@ -18,6 +18,7 @@
                     <li><a href="https://www.moop.org.uk/category/about.html">About</a></li>
                     <li><a href="https://www.moop.org.uk/category/games.html">Games</a></li>
                     <li><a href="https://www.moop.org.uk/category/retrochallenge.html">Retrochallenge</a></li>
+                    <li><a href="https://www.moop.org.uk/category/site.html">Site</a></li>
                     <li><a href="https://www.moop.org.uk/category/things.html">Things</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -25,6 +26,7 @@
     <li><a href="https://www.moop.org.uk/category/about.html">About</a></li>
     <li><a href="https://www.moop.org.uk/category/games.html">Games</a></li>
     <li><a href="https://www.moop.org.uk/category/retrochallenge.html">Retrochallenge</a></li>
+    <li><a href="https://www.moop.org.uk/category/site.html">Site</a></li>
     <li><a href="https://www.moop.org.uk/category/things.html">Things</a></li>
 </ul>
         <section id="extras" class="body">
