Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>Mooplog</title>
-        <link rel="stylesheet" href="https://www.moop.org.uk/theme/css/main.css" />
-        <link href="https://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
+        <link rel="stylesheet" href="http://www.moop.org.uk/theme/css/main.css" />
+        <link href="http://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,13 +13,13 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="https://www.moop.org.uk/">Mooplog </a></h1>
+                <h1><a href="http://www.moop.org.uk/">Mooplog </a></h1>
                 <nav><ul>
-                    <li><a href="https://www.moop.org.uk/category/about.html">About</a></li>
-                    <li><a href="https://www.moop.org.uk/category/games.html">Games</a></li>
-                    <li><a href="https://www.moop.org.uk/category/retrochallenge.html">Retrochallenge</a></li>
-                    <li><a href="https://www.moop.org.uk/category/site.html">Site</a></li>
-                    <li><a href="https://www.moop.org.uk/category/things.html">Things</a></li>
+                    <li><a href="http://www.moop.org.uk/category/about.html">About</a></li>
+                    <li><a href="http://www.moop.org.uk/category/games.html">Games</a></li>
+                    <li><a href="http://www.moop.org.uk/category/retrochallenge.html">Retrochallenge</a></li>
+                    <li><a href="http://www.moop.org.uk/category/site.html">Site</a></li>
+                    <li><a href="http://www.moop.org.uk/category/things.html">Things</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -27,86 +27,86 @@
 
 <dl>
     <dt>Mon 06 February 2017</dt>
-    <dd><a href="https://www.moop.org.uk/new-site.html">New Site With Pelican Static Site Generator</a></dd>
+    <dd><a href="http://www.moop.org.uk/new-site.html">New Site With Pelican Static Site Generator</a></dd>
     <dt>Wed 02 November 2016</dt>
-    <dd><a href="https://www.moop.org.uk/retrochallenge-201610-one-bodge-to-fix-them-all.html">RetroChallenge 2016/10 - One bodge to fix them all</a></dd>
+    <dd><a href="http://www.moop.org.uk/retrochallenge-201610-one-bodge-to-fix-them-all.html">RetroChallenge 2016/10 - One bodge to fix them all</a></dd>
     <dt>Tue 01 November 2016</dt>
-    <dd><a href="https://www.moop.org.uk/retrochallenge-201610-tools.html">Retrochallenge 2016/10 - Tools</a></dd>
+    <dd><a href="http://www.moop.org.uk/retrochallenge-201610-tools.html">Retrochallenge 2016/10 - Tools</a></dd>
     <dt>Mon 31 October 2016</dt>
-    <dd><a href="https://www.moop.org.uk/retrochallenge-201610-deadline.html">Retrochallenge 2016/10 - Deadline</a></dd>
+    <dd><a href="http://www.moop.org.uk/retrochallenge-201610-deadline.html">Retrochallenge 2016/10 - Deadline</a></dd>
     <dt>Mon 31 October 2016</dt>
-    <dd><a href="https://www.moop.org.uk/retrochallenge-201610-state-of-play.html">Retrochallenge 2016/10 - State of Play</a></dd>
+    <dd><a href="http://www.moop.org.uk/retrochallenge-201610-state-of-play.html">Retrochallenge 2016/10 - State of Play</a></dd>
     <dt>Sun 30 October 2016</dt>
-    <dd><a href="https://www.moop.org.uk/retrochallenge-201610-breadboard-fun.html">Retrochallenge 2016/10 - Breadboard Fun</a></dd>
+    <dd><a href="http://www.moop.org.uk/retrochallenge-201610-breadboard-fun.html">Retrochallenge 2016/10 - Breadboard Fun</a></dd>
     <dt>Sun 30 October 2016</dt>
-    <dd><a href="https://www.moop.org.uk/retrochallenge-201610-due-diligence.html">Retrochallenge 2016/10 - Due diligence</a></dd>
+    <dd><a href="http://www.moop.org.uk/retrochallenge-201610-due-diligence.html">Retrochallenge 2016/10 - Due diligence</a></dd>
     <dt>Sun 23 October 2016</dt>
-    <dd><a href="https://www.moop.org.uk/retrochallenge-201610-building-retro-computers-with-modern-tools.html">Retrochallenge 2016/10 - Building retro computers with modern tools</a></dd>
+    <dd><a href="http://www.moop.org.uk/retrochallenge-201610-building-retro-computers-with-modern-tools.html">Retrochallenge 2016/10 - Building retro computers with modern tools</a></dd>
     <dt>Sat 15 October 2016</dt>
-    <dd><a href="https://www.moop.org.uk/retrochallenge-201610-previous-version-and-problems.html">Retrochallenge 2016/10 - Previous version and problems</a></dd>
+    <dd><a href="http://www.moop.org.uk/retrochallenge-201610-previous-version-and-problems.html">Retrochallenge 2016/10 - Previous version and problems</a></dd>
     <dt>Wed 05 October 2016</dt>
-    <dd><a href="https://www.moop.org.uk/retrochallenge-201610.html">Retrochallenge 2016/10</a></dd>
+    <dd><a href="http://www.moop.org.uk/retrochallenge-201610.html">Retrochallenge 2016/10</a></dd>
     <dt>Sun 02 August 2015</dt>
-    <dd><a href="https://www.moop.org.uk/speedtwin-update.html">SpeedTwin Update</a></dd>
+    <dd><a href="http://www.moop.org.uk/speedtwin-update.html">SpeedTwin Update</a></dd>
     <dt>Mon 04 May 2015</dt>
-    <dd><a href="https://www.moop.org.uk/cnc-cut-control-horns.html">CNC cut control horns</a></dd>
+    <dd><a href="http://www.moop.org.uk/cnc-cut-control-horns.html">CNC cut control horns</a></dd>
     <dt>Sun 15 March 2015</dt>
-    <dd><a href="https://www.moop.org.uk/hot-wire-cutter.html">Hot Wire Cutter</a></dd>
+    <dd><a href="http://www.moop.org.uk/hot-wire-cutter.html">Hot Wire Cutter</a></dd>
     <dt>Sun 15 March 2015</dt>
-    <dd><a href="https://www.moop.org.uk/foobot.html">Foobot</a></dd>
+    <dd><a href="http://www.moop.org.uk/foobot.html">Foobot</a></dd>
     <dt>Sun 28 December 2014</dt>
-    <dd><a href="https://www.moop.org.uk/tricopter.html">Tricopter</a></dd>
+    <dd><a href="http://www.moop.org.uk/tricopter.html">Tricopter</a></dd>
     <dt>Sat 13 September 2014</dt>
-    <dd><a href="https://www.moop.org.uk/eshapeoko-part-3-tidying-up.html">eShapeOko Part 3 - Tidying up</a></dd>
+    <dd><a href="http://www.moop.org.uk/eshapeoko-part-3-tidying-up.html">eShapeOko Part 3 - Tidying up</a></dd>
     <dt>Thu 12 June 2014</dt>
-    <dd><a href="https://www.moop.org.uk/simple-pcb-drilling-jig.html">Simple PCB drilling jig</a></dd>
+    <dd><a href="http://www.moop.org.uk/simple-pcb-drilling-jig.html">Simple PCB drilling jig</a></dd>
     <dt>Mon 17 February 2014</dt>
-    <dd><a href="https://www.moop.org.uk/arcade-control-panels.html">Arcade Control Panels</a></dd>
+    <dd><a href="http://www.moop.org.uk/arcade-control-panels.html">Arcade Control Panels</a></dd>
     <dt>Sun 15 December 2013</dt>
-    <dd><a href="https://www.moop.org.uk/loot-of-the-forest.html">Loot of the Forest</a></dd>
+    <dd><a href="http://www.moop.org.uk/loot-of-the-forest.html">Loot of the Forest</a></dd>
     <dt>Thu 12 December 2013</dt>
-    <dd><a href="https://www.moop.org.uk/stomp-stomp-stomp-stomp.html">STOMP STOMP STOMP STOMP</a></dd>
+    <dd><a href="http://www.moop.org.uk/stomp-stomp-stomp-stomp.html">STOMP STOMP STOMP STOMP</a></dd>
     <dt>Sun 24 November 2013</dt>
-    <dd><a href="https://www.moop.org.uk/the-minigun-a-mini-super-gun.html">The Minigun (A mini Super Gun)</a></dd>
+    <dd><a href="http://www.moop.org.uk/the-minigun-a-mini-super-gun.html">The Minigun (A mini Super Gun)</a></dd>
     <dt>Tue 22 October 2013</dt>
-    <dd><a href="https://www.moop.org.uk/eshapeoko-part-2-mechanicals.html">eShapeOko Part 2 - Mechanicals</a></dd>
+    <dd><a href="http://www.moop.org.uk/eshapeoko-part-2-mechanicals.html">eShapeOko Part 2 - Mechanicals</a></dd>
     <dt>Tue 27 August 2013</dt>
-    <dd><a href="https://www.moop.org.uk/eshapeoko-part-1.html">eShapeOko Part 1</a></dd>
+    <dd><a href="http://www.moop.org.uk/eshapeoko-part-1.html">eShapeOko Part 1</a></dd>
     <dt>Sun 25 August 2013</dt>
-    <dd><a href="https://www.moop.org.uk/lightwaverfmoodcontrollerhack.html">Lightwave RF Mood Controller Hack</a></dd>
+    <dd><a href="http://www.moop.org.uk/lightwaverfmoodcontrollerhack.html">Lightwave RF Mood Controller Hack</a></dd>
     <dt>Thu 15 August 2013</dt>
-    <dd><a href="https://www.moop.org.uk/siri-control-my-lights.html">Siri, control my lights</a></dd>
+    <dd><a href="http://www.moop.org.uk/siri-control-my-lights.html">Siri, control my lights</a></dd>
     <dt>Sat 10 August 2013</dt>
-    <dd><a href="https://www.moop.org.uk/voice-controlled-lights.html">Voice Controlled Lights</a></dd>
+    <dd><a href="http://www.moop.org.uk/voice-controlled-lights.html">Voice Controlled Lights</a></dd>
     <dt>Mon 08 July 2013</dt>
-    <dd><a href="https://www.moop.org.uk/unholy-chalupa-mkiii.html">Unholy Chalupa MKIII</a></dd>
+    <dd><a href="http://www.moop.org.uk/unholy-chalupa-mkiii.html">Unholy Chalupa MKIII</a></dd>
     <dt>Mon 27 May 2013</dt>
-    <dd><a href="https://www.moop.org.uk/homemade-wireless-plug.html">Homemade Wireless Plug</a></dd>
+    <dd><a href="http://www.moop.org.uk/homemade-wireless-plug.html">Homemade Wireless Plug</a></dd>
     <dt>Sun 19 May 2013</dt>
-    <dd><a href="https://www.moop.org.uk/update.html">Update</a></dd>
+    <dd><a href="http://www.moop.org.uk/update.html">Update</a></dd>
     <dt>Sun 03 March 2013</dt>
-    <dd><a href="https://www.moop.org.uk/glider-restoration-part-4-finishing-touches.html">Glider Restoration Part 4 - Finishing touches</a></dd>
+    <dd><a href="http://www.moop.org.uk/glider-restoration-part-4-finishing-touches.html">Glider Restoration Part 4 - Finishing touches</a></dd>
     <dt>Sun 24 February 2013</dt>
-    <dd><a href="https://www.moop.org.uk/glider-restoration-part-3-fuselage.html">Glider Restoration Part 3 - Fuselage</a></dd>
+    <dd><a href="http://www.moop.org.uk/glider-restoration-part-3-fuselage.html">Glider Restoration Part 3 - Fuselage</a></dd>
     <dt>Tue 19 February 2013</dt>
-    <dd><a href="https://www.moop.org.uk/glider-restoration-part-2-finishing-the-wings.html">Glider Restoration Part 2 - Finishing the wings</a></dd>
+    <dd><a href="http://www.moop.org.uk/glider-restoration-part-2-finishing-the-wings.html">Glider Restoration Part 2 - Finishing the wings</a></dd>
     <dt>Sat 02 February 2013</dt>
-    <dd><a href="https://www.moop.org.uk/space-saving-wall-art.html">Space saving wall art</a></dd>
+    <dd><a href="http://www.moop.org.uk/space-saving-wall-art.html">Space saving wall art</a></dd>
     <dt>Sat 02 February 2013</dt>
-    <dd><a href="https://www.moop.org.uk/model-glider-restoration.html">Model glider restoration</a></dd>
+    <dd><a href="http://www.moop.org.uk/model-glider-restoration.html">Model glider restoration</a></dd>
     <dt>Fri 28 December 2012</dt>
-    <dd><a href="https://www.moop.org.uk/mittens-and-snowdrop-action-figures.html">Mittens and Snowdrop action figures</a></dd>
+    <dd><a href="http://www.moop.org.uk/mittens-and-snowdrop-action-figures.html">Mittens and Snowdrop action figures</a></dd>
     <dt>Sun 23 December 2012</dt>
-    <dd><a href="https://www.moop.org.uk/diy-mini-lathe.html">DIY Mini Lathe</a></dd>
+    <dd><a href="http://www.moop.org.uk/diy-mini-lathe.html">DIY Mini Lathe</a></dd>
     <dt>Sat 22 December 2012</dt>
-    <dd><a href="https://www.moop.org.uk/about.html">About</a></dd>
+    <dd><a href="http://www.moop.org.uk/about.html">About</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="https://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="http://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                         </ul>
                 </div><!-- /.social -->
