--- a/authors.html
+++ b/authors.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>Mooplog - Authors</title>
-        <link rel="stylesheet" href="https://www.moop.org.uk/theme/css/main.css" />
-        <link href="https://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
+        <link rel="stylesheet" href="http://www.moop.org.uk/theme/css/main.css" />
+        <link href="http://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,21 +13,21 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="https://www.moop.org.uk/">Mooplog </a></h1>
+                <h1><a href="http://www.moop.org.uk/">Mooplog </a></h1>
                 <nav><ul>
-                    <li><a href="https://www.moop.org.uk/category/about.html">About</a></li>
-                    <li><a href="https://www.moop.org.uk/category/games.html">Games</a></li>
-                    <li><a href="https://www.moop.org.uk/category/retrochallenge.html">Retrochallenge</a></li>
-                    <li><a href="https://www.moop.org.uk/category/site.html">Site</a></li>
-                    <li><a href="https://www.moop.org.uk/category/things.html">Things</a></li>
+                    <li><a href="http://www.moop.org.uk/category/about.html">About</a></li>
+                    <li><a href="http://www.moop.org.uk/category/games.html">Games</a></li>
+                    <li><a href="http://www.moop.org.uk/category/retrochallenge.html">Retrochallenge</a></li>
+                    <li><a href="http://www.moop.org.uk/category/site.html">Site</a></li>
+                    <li><a href="http://www.moop.org.uk/category/things.html">Things</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Mooplog</h1>
     <ul>
-        <li><a href="https://www.moop.org.uk/author/charlie.html">charlie</a> (5)</li>
-        <li><a href="https://www.moop.org.uk/author/moop.html">moop</a> (32)</li>
+        <li><a href="http://www.moop.org.uk/author/charlie.html">charlie</a> (5)</li>
+        <li><a href="http://www.moop.org.uk/author/moop.html">moop</a> (32)</li>
     </ul>
 </section>
 
@@ -35,7 +35,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="https://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="http://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                         </ul>
                 </div><!-- /.social -->
