--- a/eshapeoko-part-3-tidying-up.html
+++ b/eshapeoko-part-3-tidying-up.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>eShapeOko Part 3 - Tidying up</title>
         <link rel="stylesheet" href="http://www.moop.org.uk/theme/css/main.css" />
-        <link href="http://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
+        <link href="http://www.moop.org.uk/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -135,7 +135,7 @@ more bulk so the strain relief in the connectors has something to grip.</p>
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="http://www.moop.org.uk/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                         </ul>
                 </div><!-- /.social -->
