--- a/speedtwin-update.html
+++ b/speedtwin-update.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>SpeedTwin Update</title>
         <link rel="stylesheet" href="http://www.moop.org.uk/theme/css/main.css" />
-        <link href="http://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
+        <link href="http://www.moop.org.uk/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Mooplog Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -176,7 +176,7 @@ the last 10% which will probably take 90% of the time!</p>
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://www.moop.org.uk/index.php/feed/index.html" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="http://www.moop.org.uk/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                         </ul>
                 </div><!-- /.social -->
